@@ -1,3 +1,4 @@
 File=kthinkbat.kcfg
 ClassName=KThinkBatConfig
+#Singleton=true
 Mutators=true
